--- a/forum/static/css/dark-theme.css
+++ b/forum/static/css/dark-theme.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     background-color: hsl(215, 15%, 16%);
     color: rgb(118, 131, 144);
 }
@@ -10,3 +10,5 @@ h1 {
 h2 {
     color: rgb(221, 238, 255);
 }
+
+*/
