--- a/forum/templates/forum/base.html
+++ b/forum/templates/forum/base.html
@@ -1,59 +1,34 @@
+<!DOCTYPE html>
 {% load static %}
-
-<!doctype html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <!-- Custom css -->
-        <link rel="stylesheet" type="text/css" href="{% static 'css/global.css' %}">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+    <title>CUForum</title>
+</head>
 
-        <title>Forum</title>
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class=""navbar-brand" href ="{% url 'forum-index' %}"><i class="fas fa-comments fa-2x home-btn"></i></a>
-                <ul class="navbar-nav justify-content-end ms-md-auto">
-                {% if user.is_authenticated %}                   
-                <li class="nav-item align-self-center">
-                    <a href="{% url 'logout' %}"><h3>log out</h3></a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a href="{% url 'profile' username=user.username %}"><img class="rounded-circle account-img thumbpic" src="{{ user.profile.image.url }}" height="40"></a>
-                </li>
+<body>
 
-                {% else %}
+    {% include 'forum/navbar.html' %}
 
-                <li class="nav-item align-self-center">
-                    <button type="button" class="btn btn-dark">
-                        <a href="{% url 'login' %}"><h3>log in</h3></a>
-                    </button>
-                </li>
-                <li class="nav-item align-self-center">
-                    <button type="button" class="btn btn-dark">
-                        <a href="{% url 'registration' %}"><h3>register</h3></a>
-                    </button>
-                </li>
-                {% endif %}
-                </ul>
-                
-            </div>
-        </nav>
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
 
-        <div class="container-fluid">
-            {% block content %}{% endblock %}
-        </div>
+    {% block content %}
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="{% static 'js/headings.js' %}"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    </body>
+
+    {% endblock %}
+
+    <script src="{% static 'js/script.js' %}"></script>
+</body>
+
 </html>
