--- a/forum/templates/forum/post_form.html
+++ b/forum/templates/forum/post_form.html
@@ -1,25 +1,56 @@
-{% extends "forum/base.html" %}
-{% load crispy_forms_tags %}
+{% extends 'forum/base.html' %}
+
 {% block content %}
-
-    <div class="row">
-        <div class="col-2 offset-5 mt-5">
-            <h1 style="width: 8ch;">new post</h1>
+<main class="create-post layout">
+  <div class="container">
+    <div class="layout__box">
+      <div class="layout__boxHeader">
+        <div class="layout__boxTitle">
+          <a href="{{request.META.HTTP_REFERER}}">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <title>arrow-left</title>
+              <path
+                d="M13.723 2.286l-13.723 13.714 13.719 13.714 1.616-1.611-10.96-10.96h27.625v-2.286h-27.625l10.965-10.965-1.616-1.607z">
+              </path>
+            </svg>
+          </a>
+          <h3>Create/Update Post</h3>
         </div>
-    </div>
+      </div>
+      <div class="layout__body">
+        <form class="form" action="" method="POST">
+          {% csrf_token %}
 
-    <div class="row">
-        <div class="col-2 offset-5 mt-5">
-            <form method="POST">
-                {% csrf_token %}
-                <fieldset class="form-group">
-                    {{ form|crispy }}
-                </fieldset>
-                <div class="form-group">
-                    <button class="btn btn-outline-info" type="submit">Create</button>
-                </div>
-            </form>
-        </div>
-    </div>
+          <div class="form__group">
+            <label for="post_topic">Enter a Topic</label>
+            <input required type="text" value="{{post.topic.name}}" name="topic" list="topic-list" />
+            <datalist id="topic-list">
+              <select id="post_topic">
+                {% for topic in topics %}
+                <option value="{{topic.name}}">{{topic.name}}</option>
+                {% endfor %}
+              </select>
+            </datalist>
+          </div>
 
-{% endblock content %} 
+
+          <div class="form__group">
+            <label for="post_name">Post Name</label>
+            {{form.name}}
+          </div>
+
+          <div class="form__group">
+            <label for="post_description">Post Description</label>
+            {{form.description}}
+          </div>
+
+          <div class="form__action">
+            <a class="btn btn--dark" href="{{request.META.HTTP_REFERER}}">Cancel</a>
+            <button class="btn btn--main" type="submit">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</main>
+{% endblock content %}
