--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -1,61 +1,49 @@
-{% extends 'forum/base.html' %}
+{% extends 'forum/base.html' %} {% block content %}
 
-{% block content %}
-
-<main class="layout layout--3">
+<main>
   <div class="container">
+    <div class="row">
+      <!-- Topics Start -->
+      <div class="col-3">{% include 'forum/topics_component.html' %}</div>
+      <!-- Topics End -->
 
-    <!-- Topics Start -->
-    {% include 'forum/topics_component.html' %}
-
-    <!-- Topics End -->
-
-    <!-- Post List Start -->
-    <div class="postList">
-      <div class="mobile-menu">
-        <form action="{% url 'home' %}" method="GET" class="header__search">
-          <label>
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-              <title>search</title>
-              <path
-                d="M32 30.586l-10.845-10.845c1.771-2.092 2.845-4.791 2.845-7.741 0-6.617-5.383-12-12-12s-12 5.383-12 12c0 6.617 5.383 12 12 12 2.949 0 5.649-1.074 7.741-2.845l10.845 10.845 1.414-1.414zM12 22c-5.514 0-10-4.486-10-10s4.486-10 10-10c5.514 0 10 4.486 10 10s-4.486 10-10 10z">
-              </path>
-            </svg>
-            <input name="q" placeholder="Search for posts" />
-          </label>
-        </form>
-        <div class="mobile-menuItems">
-          <a class="btn btn--main btn--pill" href="{% url 'topics' %}">Browse Topics</a>
-          <a class="btn btn--main btn--pill" href="{% url 'activity' %}">Recent Activities</a>
-        </div>
-      </div>
-
-      <div class="postList__header">
+      <!-- Post List Start -->
+      <div class="col-6">
         <div>
-          <h2>Study Posts</h2>
-          <p>{{post_count}} Posts available</p>
+          <div class="d-flex justify-content-between align-items-baseline">
+            <div>
+              <h1 class="display-6">Study Posts</h1>
+              <p>{{post_count}} Posts available</p>
+            </div>
+
+            <div>
+              <a class="btn btn--main" href="{% url 'create-post' %}">
+                <svg
+                  version="1.1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 32 32"
+                >
+                  <title>add</title>
+                  <path
+                    d="M16.943 0.943h-1.885v14.115h-14.115v1.885h14.115v14.115h1.885v-14.115h14.115v-1.885h-14.115v-14.115z"
+                  ></path>
+                </svg>
+                Create Post
+              </a>
+            </div>
+          </div>
+
+          {% include 'forum/feed_component.html' %}
         </div>
-
-        <a class="btn btn--main" href="{% url 'create-post' %}">
-          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-            <title>add</title>
-            <path
-              d="M16.943 0.943h-1.885v14.115h-14.115v1.885h14.115v14.115h1.885v-14.115h14.115v-1.885h-14.115v-14.115z">
-            </path>
-          </svg>
-          Create Post
-        </a>
       </div>
+      <!-- Post List End -->
 
-      {% include 'forum/feed_component.html' %}
-
+      <!-- Activities Start -->
+      <div class="col-3">{% include 'forum/activity_component.html' %}</div>
+      <!-- Activities End -->
     </div>
-    <!-- Post List End -->
-
-    <!-- Activities Start -->
-    {% include 'forum/activity_component.html' %}
-
-    <!-- Activities End -->
   </div>
 </main>
 
